Pages Almost fully functional

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City Library</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="js/tailwind.js"></script>
+    <link rel="stylesheet" href="css/tailwind.min.css">
+    <script src="js/lucide.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body class="flex flex-col min-h-screen bg-gray-50">
     <header class="px-4 lg:px-6 h-16 flex items-center bg-white shadow-sm">
         <a href="#" class="flex items-center justify-center">
@@ -15,10 +18,11 @@
             <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-3 -mt-1">City Library</span>
         </a>
         <nav class="ml-auto flex gap-4 sm:gap-6 hidden lg:flex">
-            <a href="index.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
-            <a href="#" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Catalog</a>
-            <a href="#" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
-            <a href="#" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">About</a>
+            <a href="index.html"
+                class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
+            <a href="catalog.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Catalog</a>
+            <a href="events.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
+            <a href="about.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">About</a>
         </nav>
         <!-- Mobile Navigation Menu (Hamburger) -->
         <button class="lg:hidden flex ml-auto" id="mobile-menu-button">
@@ -26,13 +30,17 @@
         </button>
         <!-- Mobile Menu (Hidden by default) -->
         <div id="mobile-menu" class="lg:hidden hidden absolute top-14 right-4 bg-white shadow-lg rounded-lg w-48 p-4">
-            <a href="index.html" class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Home</a>
-            <a href="#" class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Catalog</a>
-            <a href="#" class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Events</a>
-            <a href="#" class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">About</a>
+            <a href="index.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Home</a>
+            <a href="catalog.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Catalog</a>
+            <a href="events.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Events</a>
+            <a href="about.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">About</a>
         </div>
     </header>
-    
+
     <main class="flex-1">
         <section class="w-full py-12 md:py-24 lg:py-32 xl:py-48 bg-gradient-to-r from-blue-500 to-blue-600">
             <div class="container px-4 md:px-6 mx-auto">
@@ -47,23 +55,28 @@
                             </p>
                         </div>
                         <div class="flex flex-col gap-2 min-[400px]:flex-row">
-                            <a href="#" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-white text-blue-600 hover:bg-blue-50 h-10 px-4 py-2">
+                            <a href="#"
+                                class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-white text-blue-600 hover:bg-blue-50 h-10 px-4 py-2">
                                 Explore Catalog
                             </a>
-                            <a href="#" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-white text-white hover:bg-white hover:text-blue-600 h-10 px-4 py-2">
+                            <a href="#"
+                                class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-white text-white hover:bg-white hover:text-blue-600 h-10 px-4 py-2">
                                 Join Now
                             </a>
                         </div>
                     </div>
                     <div class="mx-auto flex w-full max-w-[800px] items-center justify-center lg:max-w-none">
-                        <img src="https://blog.pressreader.com/hubfs/Happy-Woman-Holding-Books-in-Library.jpg" alt="Library Interior" class="aspect-video overflow-hidden rounded-xl object-cover object-center" width="850" height="650">
+                        <img src="img/Librarian.webp" alt="Library Interior"
+                            class="aspect-video overflow-hidden rounded-xl object-cover object-center" width="850"
+                            height="650">
                     </div>
                 </div>
             </div>
         </section>
         <section class="w-full py-12 md:py-24 lg:py-32 bg-white">
             <div class="container px-4 md:px-6 mx-auto">
-                <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-center mb-12 text-blue-600">Our Services</h2>
+                <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-center mb-12 text-blue-600">Our Services
+                </h2>
                 <div class="grid gap-6 lg:grid-cols-3 lg:gap-12">
                     <div class="flex flex-col items-center text-center space-y-4">
                         <i data-lucide="clock" class="h-12 w-12 text-blue-500"></i>
@@ -76,7 +89,8 @@
                         <i data-lucide="calendar" class="h-12 w-12 text-blue-500"></i>
                         <h3 class="text-xl font-bold text-blue-600">Regular Events</h3>
                         <p class="text-gray-600">
-                            Join our book clubs, author talks, and children's storytimes. There's always something happening!
+                            Join our book clubs, author talks, and children's storytimes. There's always something
+                            happening!
                         </p>
                     </div>
                     <div class="flex flex-col items-center text-center space-y-4">
@@ -91,28 +105,32 @@
         </section>
         <section class="w-full py-12 md:py-24 lg:py-32 bg-blue-50">
             <div class="container px-4 md:px-6 mx-auto">
-                <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-center mb-12 text-blue-600">Featured Books</h2>
+                <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-center mb-12 text-blue-600">Featured
+                    Books</h2>
                 <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-4">
                     <div class="flex flex-col items-center space-y-4">
-                        <img src="./images/Chess.png" alt="Book 1 Cover" class="w-48 h-72 object-cover rounded-lg shadow-md">
+                        <img src="./img/Chess.png" alt="Book 1 Cover"
+                            class="w-48 h-72 object-cover rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold text-blue-600">A Game of Chess</h3>
                         <p class="text-gray-600 text-sm">By Nafisat Oluwabukola</p>
                         <a href="#" class="text-blue-500 hover:underline">Learn More</a>
                     </div>
                     <div class="flex flex-col items-center space-y-4">
-                        <img src="./images/Gifted.jpg" alt="Book 2 Cover" class="w-48 h-72 object-cover rounded-lg shadow-md">
+                        <img src="./img/Gifted.jpg" alt="Book 2 Cover"
+                            class="w-48 h-72 object-cover rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold text-blue-600">Gifted Hands</h3>
                         <p class="text-gray-600 text-sm">By Ben Carson</p>
                         <a href="#" class="text-blue-500 hover:underline">Learn More</a>
                     </div>
                     <div class="flex flex-col items-center space-y-4">
-                        <img src="./images/Mad.png" alt="Book 3 Cover" class="w-48 h-72 object-cover rounded-lg shadow-md">
+                        <img src="./img/Mad.png" alt="Book 3 Cover" class="w-48 h-72 object-cover rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold text-blue-600">Nearly All The Men In Lagos Are Mad</h3>
                         <p class="text-gray-600 text-sm">By Damilare Kuku</p>
                         <a href="#" class="text-blue-500 hover:underline">Learn More</a>
                     </div>
                     <div class="flex flex-col items-center space-y-4">
-                        <img src="./images/Success.png" alt="Book 4 Cover" class="w-48 h-72 object-cover rounded-lg shadow-md">
+                        <img src="./img/Success.png" alt="Book 4 Cover"
+                            class="w-48 h-72 object-cover rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold text-blue-600">Scaling for Success</h3>
                         <p class="text-gray-600 text-sm">By Deji Adebusoye</p>
                         <a href="#" class="text-blue-500 hover:underline">Learn More</a>
@@ -125,14 +143,19 @@
                 <div class="flex flex-col items-center justify-center space-y-4 text-center">
                     <div class="space-y-2">
                         <h2 class="text-3xl font-bold tracking-tighter sm:text-5xl text-blue-600">Stay Updated</h2>
-                        <p class="max-w-[900px] text-gray-600 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
-                            Sign up for our newsletter to receive updates on new arrivals, events, and special promotions.
+                        <p
+                            class="max-w-[900px] text-gray-600 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
+                            Sign up for our newsletter to receive updates on new arrivals, events, and special
+                            promotions.
                         </p>
                     </div>
                     <div class="w-full max-w-sm space-y-2">
                         <form class="flex space-x-2">
-                            <input class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1" placeholder="Enter your email" type="email">
-                            <button type="submit" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4 py-2">
+                            <input
+                                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
+                                placeholder="Enter your email" type="email">
+                            <button type="submit"
+                                class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4 py-2">
                                 Subscribe
                             </button>
                         </form>
@@ -145,7 +168,7 @@
         </section>
     </main>
     <footer class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t bg-white">
-        <p class="text-xs text-gray-500">© 2024 Acme Library. All rights reserved.</p>
+        <p class="text-xs text-gray-500">© 2024 City Library. All rights reserved.</p>
         <nav class="sm:ml-auto flex gap-4 sm:gap-6">
             <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Terms of Service</a>
             <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
@@ -154,6 +177,7 @@
     <script>
         lucide.createIcons();
     </script>
-        <script src="script.js"></script>
+    <script src="js/menu.js"></script>
 </body>
+
 </html>
