--- a/about.html
+++ b/about.html
@@ -5,21 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About City Library</title>
     <script src="js/tailwind.js"></script>
-    <link rel="stylesheet" href="css/tailwind.min.css">
+    <link rel="stylesheet" href="css/tailwind.min.css">'
     <script src="js/lucide.min.js"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-50">
-    <header class="px-4 lg:px-6 h-14 flex items-center bg-white shadow-sm">
-        <a href="index.html" class="flex items-center justify-center">
+    <header class="px-4 lg:px-6 h-16 flex items-center bg-white shadow-sm">
+        <a href="#" class="flex items-center justify-center">
             <i data-lucide="book-open" class="h-6 w-6 text-blue-600"></i>
             <span class="text-2xl font-bold tracking-tighter sm:text-2xl ml-3 -mt-1">City Library</span>
         </a>
-        <nav class="ml-auto flex gap-4 sm:gap-6">
-            <a href="index.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
+        <nav class="ml-auto flex gap-4 sm:gap-6 hidden lg:flex">
+            <a href="index.html"
+                class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Home</a>
             <a href="catalog.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Catalog</a>
-            <a href="events" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
-            <a href="about.html" class="text-sm font-medium text-blue-600 underline underline-offset-4">About</a>
+            <a href="events.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">Events</a>
+            <a href="about.html" class="text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4">About</a>
         </nav>
+        <!-- Mobile Navigation Menu (Hamburger) -->
+        <button class="lg:hidden flex ml-auto" id="mobile-menu-button">
+            <i class="w-6 h-6 text-blue-600">☰</i>
+        </button>
+        <!-- Mobile Menu (Hidden by default) -->
+        <div id="mobile-menu" class="lg:hidden hidden absolute top-14 right-4 bg-white shadow-lg rounded-lg w-48 p-4">
+            <a href="index.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Home</a>
+            <a href="catalog.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Catalog</a>
+            <a href="events.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">Events</a>
+            <a href="about.html"
+                class="block text-sm font-medium hover:text-blue-600 hover:underline underline-offset-4 py-2">About</a>
+        </div>
     </header>
     <main class="flex-1">
         <section class="w-full py-12 md:py-24 lg:py-32 bg-gradient-to-r from-blue-500 to-blue-600">
@@ -98,7 +114,7 @@
                         <h3 class="text-xl font-semibold text-blue-600">Contact</h3>
                         <p class="text-gray-600">
                             Phone: (555) 123-4567<br>
-                            Email: info@acmelibrary.com
+                            Email: info@citylibrary.com
                         </p>
                     </div>
                     <div class="flex justify-center items-center">
