--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                             </p>
                         </div>
                         <div class="flex flex-col gap-2 min-[400px]:flex-row">
-                            <a href="#"
+                            <a href="catalog.html"
                                 class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-white text-blue-600 hover:bg-blue-50 h-10 px-4 py-2">
                                 Explore Catalog
                             </a>
-                            <a href="#"
+                            <a href="about.html"
                                 class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-white text-white hover:bg-white hover:text-blue-600 h-10 px-4 py-2">
-                                Join Now
+                                About Us
                             </a>
                         </div>
                     </div>
@@ -174,10 +174,10 @@
             <a class="text-xs hover:underline underline-offset-4 text-blue-600" href="#">Privacy</a>
         </nav>
     </footer>
+    <script src="js/script.js.js"></script>
     <script>
         lucide.createIcons();
     </script>
-    <script src="js/menu.js"></script>
 </body>
 
 </html>
