--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - City Library</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="js/tailwind.js"></script>
+    <link href="css/tailwind.min.css" rel="stylesheet">
+    <script src="js/lucide.min.js"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-50">
     <header class="px-4 lg:px-6 h-14 flex items-center bg-white shadow-sm relative z-10">
@@ -134,31 +134,47 @@
         <section class="w-full py-12 md:py-24 lg:py-32 bg-white">
             <div class="container px-4 md:px-6 mx-auto">
                 <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl text-blue-600 text-center mb-8">Visit Us</h2>
-                <div class="grid gap-6 lg:grid-cols-2 lg:gap-12">
-                    <div class="space-y-4">
-                        <h3 class="text-xl font-semibold text-blue-600">Address</h3>
-                        <p class="text-gray-600">
-                            123 Library Street<br>
-                            Booktown, BT 12345
-                        </p>
-                        <h3 class="text-xl font-semibold text-blue-600">Hours</h3>
-                        <p class="text-gray-600">
-                            Monday - Friday: 8:00 AM - 10:00 PM<br>
-                            Saturday: 9:00 AM - 8:00 PM<br>
-                            Sunday: 10:00 AM - 6:00 PM
-                        </p>
-                        <h3 class="text-xl font-semibold text-blue-600">Contact</h3>
-                        <p class="text-gray-600">
-                            Phone: (555) 123-4567<br>
-                            Email: info@citylibrary.com
-                        </p>
+                <div class="grid gap-8 md:gap-12 lg:grid-cols-2 items-center">
+                    <!-- Left Section: Address, Hours, and Contact -->
+                    <div class="space-y-8">
+                        <div>
+                            <h3 class="text-xl font-semibold text-blue-600">Address</h3>
+                            <p class="text-gray-600">
+                                123 Library Street<br>
+                                Booktown, BT 12345
+                            </p>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold text-blue-600">Hours</h3>
+                            <p class="text-gray-600">
+                                Monday - Friday: 8:00 AM - 10:00 PM<br>
+                                Saturday: 9:00 AM - 8:00 PM<br>
+                                Sunday: 10:00 AM - 6:00 PM
+                            </p>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold text-blue-600">Contact</h3>
+                            <p class="text-gray-600">
+                                Phone: (555) 123-4567<br>
+                                Email: info@citylibrary.com
+                            </p>
+                        </div>
                     </div>
-                    <div class="flex justify-center items-center">
-                        <img src="/placeholder.svg?height=300&width=500" alt="Map" class="rounded-lg shadow-md object-cover" width="500" height="300">
+                    <!-- Right Section: Additional Information or Visuals -->
+                    <div class="text-center lg:text-left">
+                        <img
+                            src="img/city-library.png"
+                            alt="Library Location"
+                            class="rounded-lg shadow-md mx-auto lg:mx-0"
+                        />
+                        <p class="text-gray-500 mt-4 text-sm">
+                            Come visit us at our cozy library in the heart of Booktown!
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
+        
     </main>
 
     <footer class="mt-auto bg-white border-t border-gray-200">
