--- a/catalog.html
+++ b/catalog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog - Acme Library</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="js/tailwind.js"></script>
+    <link href="css/tailwind.min.css" rel="stylesheet">
+    <script src="js/lucide.min.js"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-50">
     <header class="px-4 lg:px-6 h-14 flex items-center bg-white shadow-sm relative z-10">
